--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,29 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.14",
+        "doctrine/doctrine-migrations-bundle": "^3.4",
+        "doctrine/orm": "^3.3",
+        "firebase/php-jwt": "^6.11",
+        "nelmio/api-doc-bundle": "^5.0",
+        "symfony/asset": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
+        "symfony/password-hasher": "7.2.*",
+        "symfony/property-access": "7.2.*",
         "symfony/runtime": "7.2.*",
-        "symfony/yaml": "7.2.*"
+        "symfony/security-bundle": "7.2.*",
+        "symfony/serializer": "7.2.*",
+        "symfony/twig-bundle": "7.2.*",
+        "symfony/validator": "7.2.*",
+        "symfony/yaml": "7.2.*",
+        "zircote/swagger-php": "^5.1"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.62"
     },
     "config": {
         "allow-plugins": {
