--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,8 +4,12 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    app.jwt_secret: '%env(APP_JWT_SECRET)%'
+    app.jwt_algo: '%env(APP_JWT_ALGO)%'
+    app.jwt_exp: '%env(APP_JWT_EXP)%'
+    app.admin_email: '%env(APP_ADMIN_EMAIL)%'
 services:
+    Symfony\Component\Serializer\Normalizer\ObjectNormalizer: ~
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
@@ -21,4 +25,7 @@ services:
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # please note that last definitions always *replace* previous 
+    App\Controller\ProductController:
+        arguments:
+            $adminEmail: '%app.admin_email%'
